# op-ai-tools

./: .gitignore  Makefile  Project Overview - First Milestone.md  README.md  docker-compose.yml
data/: questions_index.json
pkg/op-app/: .env.example  .envrc.example  logs.csv  pyproject.toml
pkg/op-app/op_app/: api.py  console.py  scheduler.py  worker.py
pkg/op-app/op_app/tasks/: sync.py
pkg/op-app/op_app/utils/: model_predicted_answer.py
pkg/op-artifacts/: pyproject.toml
pkg/op-artifacts/op_artifacts/: index_keywords.json  index_questions.json
pkg/op-artifacts/op_artifacts/dbs/documentation_db/faiss/text-embedding-ada-002/: index.faiss  index.pkl
pkg/op-artifacts/op_artifacts/dbs/governance_documentation_db/faiss/text-embedding-ada-002/: index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"ARCHIVED  & OLD Missions_db/faiss/text-embedding-ada-002/: index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Accountability  🗂️_db/faiss/text-embedding-ada-002/: index.faiss  index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Alliances_db/faiss/text-embedding-ada-002/: index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Citizens  👥_db/faiss/text-embedding-ada-002/: index.faiss  index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Community Calls_db/faiss/text-embedding-ada-002/: index.faiss  index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Council Communication Threads_db/faiss/text-embedding-ada-002/: index.faiss  index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Delegate Updates_db/faiss/text-embedding-ada-002/: index.faiss  index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Delegates  🏛_db/faiss/text-embedding-ada-002/: index.faiss  index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Elected  Representatives 💼_db/faiss/text-embedding-ada-002/: index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Elections_db/faiss/text-embedding-ada-002/: index.faiss  index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Feedback  💬_db/faiss/text-embedding-ada-002/: index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"General  Discussions ✨ _db/faiss/text-embedding-ada-002/: index.faiss
pkg/op-artifacts/op_artifacts/dbs/summary_"Get  Started 🌱_db/faiss/text-embedding-ada-002/: index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Governance  Design 📐_db/faiss/text-embedding-ada-002/: index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Governance Fund: Phase 0_db/faiss/text-embedding-ada-002/: index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Governance Fund: Phase 1_db/faiss/text-embedding-ada-002/: index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Governance Updates_db/faiss/text-embedding-ada-002/: index.faiss  index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Grant Misuse Reports_db/faiss/text-embedding-ada-002/: index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Grant Updates_db/faiss/text-embedding-ada-002/: index.faiss  index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Grants Council Cycle 10-11_db/faiss/text-embedding-ada-002/: index.faiss  index.pkl
pkg/op-artifacts/op_artifacts/dbs/summary_"Grants Council_db/faiss/text-embedding-ada-002/: index.faiss  index.pkl
pkg/op-artifacts/op_artifacts/dbs/text-embedding-ada-002/: index.pkl
pkg/op-brains/: .gitignore  README.md  pyproject.toml
pkg/op-brains/op_brains/: README.md  config.py  exceptions.py  setup.py  structured_logger.py
pkg/op-brains/op_brains/chat/: apis.py  classify.py  model_utils.py  prompts.py  system_structure.py  test_chat_model.py  utils.py
pkg/op-brains/op_brains/documents/: __init__.py  optimism.py
pkg/op-brains/op_brains/retriever/: connect_db.py  connect_faiss.py
pkg/op-brains/op_brains/summarizer/: sample.py  summarize_all_threads.py  summarize_out_of_date_threads.py  summarizer.py  utils.py
pkg/op-brains/tests/: test_api.py  test_cli.py  test_documents.py  test_setup.py  test_utils.py
pkg/op-chat-brains/: .gitignore  README.md  pyproject.toml
pkg/op-chat-brains/op_chat_brains/: api.py  cli.py  config.py  documents.py  logging.py  model.py  prompts.py  setup.py  structured_logger.py  utils.py
pkg/op-chat-brains/op_chat_brains/chat/: model.py  model_utils.py  prompts.py  setup_indexing.py  system_structure.py  utils.py
pkg/op-chat-brains/op_chat_brains/documents/: __init__.py  optimism.py
pkg/op-chat-brains/op_chat_brains/retriever/: connect_db.py  connect_faiss.py  faiss.py
pkg/op-chat-brains/op_chat_brains/summarizer/: internal_dialogue.py  mock.py  prompts.py  summarize_all_threads.py  summarize_out_of_date_threads.py  summarizer.py  utils.py
pkg/op-chat-brains/tests/: test_api.py  test_cli.py  test_documents.py  test_setup.py  test_utils.py
pkg/op-data/: .envrc  .envrc.example  Makefile  pyproject.toml
pkg/op-data/op_data/: cli.py
pkg/op-data/op_data/db/: models.py
pkg/op-data/op_data/sources/: agora.py  incremental_indexer.py  mock.py  snapshot.py  summary.py
pkg/op-data/op_data/sources/discourse/: categories.py  raw_topics.py  topics.py
pkg/op-data/op_data/utils/: base_scraper.py  rate_limiter.py
pkg/op-forum-agg/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
pkg/op-forum-agg/op_forum_agg/: app.py  cli.py  config.py  extensions.py  worker.py
pkg/op-forum-agg/op_forum_agg/db/: models.py
pkg/op-forum-agg/op_forum_agg/services/: agora_proposals.py  categories.py  raw_threads.py  snapshot.py  sync_all.py  threads.py
pkg/op-forum-agg/op_forum_agg/services/discourse/: data_model.py
pkg/op-forum-agg/op_forum_agg/src/: __init__.py  queries.py  utils.py
pkg/op-forum-agg/op_forum_agg/src/sync/: __init__.py  base.py  categories.py  raw_threads.py  threads.py
pkg/op-forum-agg/op_forum_agg/src/utils/: __init__.py  db.py  forum_dl_reader.py  helpers.py
pkg/op-forum-agg/op_forum_agg/tasks/: sync.py
pkg/op-forum-agg/op_forum_agg/utils/: forum_dl_reader.py  helpers.py  schemas.py
scripts/op-43-create-datasets-for-snapshot-proposals-in-the-token-house/: main.py  pyproject.toml
scripts/op-9-create-optimism-forum-dataset/: .gitignore  main.py  pyproject.toml
www/: Makefile  (+5 more)
(+279 files in other folders)
