[tool.poetry]
name = "op_app"
version = "0.1.0"
description = ""
authors = ["José Ribeiro <me@joseribeiro.dev>"]

[tool.poetry.dependencies]
op-core = { path = "../op-core", develop = true }
op-brains = { path = "../op-brains", develop = true }
op-data = { path = "../op-data", develop = true }
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^4.0.1"
flask-limiter = "^3.8.0"
cchardet = "2.2.0a2"
redis = "^5.0.7"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
op-artifacts = { path = "../op-artifacts", develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
