[tool.poetry]
name = "op_app"
version = "0.1.0"
description = ""
authors = ["José Ribeiro <me@joseribeiro.dev>"]

[tool.poetry.dependencies]
op-core = { path = "../op-core", develop = true }
op-brains = { path = "../op-brains", develop = true }
op-data = { path = "../op-data", develop = true }
python = "^3.12"
cchardet = "2.2.0a2"
redis = "^5.0.7"
python-dotenv = "^1.0.1"
op-artifacts = { path = "../op-artifacts", develop = true }
honeybadger = "^0.20.2"
uvicorn = "^0.30.6"
quart = "^0.19.6"
quart-cors = "^0.7.0"
quart-rate-limiter = "^0.10.0"
quart-tasks = "^0.2.2"
aiofiles = "^24.1.0"
sentence-transformers = "^3.0.1"
groq = "^0.11.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
