[tool.poetry]
name = "op-artifacts"
version = "0.1.0"
description = ""
authors = ["José Ribeiro <me@joseribeiro.dev>"]
packages = [{ include = "op_artifacts" }]
include = [
    "op_artifacts/dbs/**/*.faiss",
    "op_artifacts/dbs/**/*.pkl",
    "op_artifacts/*.txt",
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
