[tool.poetry]
name = "op-forum-agg"
version = "0.1.0"
description = ""
authors = ["devjoaov <joaovictorass95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^4.0.1"
flask-limiter = "^3.8.0"
httpx = "^0.27.0"
cchardet = "2.2.0a2"
redis = "^5.0.7"
celery = "^5.4.0"
flower = "^2.0.1"
forum-dl = "^0.3.0"
python-dotenv = "^1.0.1"
psycopg = "^3.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
