[tool.poetry]
name = "op-9-create-optimism-forum-dataset"
version = "0.1.0"
description = ""
authors = ["José Ribeiro <me@joseribeiro.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
forum-dl = {path = "/Users/joseribeiro/projects/bleu/op/forum-dl"}
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
